Sugati/src/objects/Questionnaire_Question__c.object
<CustomObject>
    <description>A list of Questions on each category.</description>
    <fields>
        <fullName>QQ_Live__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Live</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QQ_Obsolete__c</fullName>
        <label>Obsolete</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QQ_Old_Question__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Fill this in, if this question is linked to an Old Question.</inlineHelpText>
        <label>Old H&amp;S Question</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Questionnaire_Question__c.QQ_Questionnaire_Question_Category__r.RecordTypeId</field>
                <operation>equals</operation>
                <value>H&amp;S</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Questionnaire_Question__c</referenceTo>
        <relationshipLabel>Questionnaire Questions</relationshipLabel>
        <relationshipName>Questionnaire_Questions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QQ_Order__c</fullName>
        <label>Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QQ_Question__c</fullName>
        <label>Question</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QQ_Questionnaire_Question_Category__c</fullName>
        <label>Questionnaire Question Category</label>
        <referenceTo>Questionnaire_Question_Category__c</referenceTo>
        <relationshipLabel>Questionnaire Questions</relationshipLabel>
        <relationshipName>Questionnaire_Questions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>QQ_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Q_Question_Type__c</fullName>
        <label>Question Type</label>
        <picklist>
            <picklistValues>
                <fullName>Multiple-choice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multiple choice with other text box</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multiple text box choice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Single-choice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Single choice with other text box</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Single choice with text Box</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Text</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Questionnaire Question</label>
    <nameField>
        <displayFormat>QQ-{0000000000}</displayFormat>
        <label>Questionnaire Question ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Questionnaire Questions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>